package-mode = false
[tool.poetry]
name = "ex1"
version = "0.1.0"
description = "First Poetry exercise"
authors = ["ivo <icorrale@student.42heilbronn.de>"]

[tool.poetry.dependencies]
python = ">=3.10"
pandas = ">=2.3.3,<4.0.0"
numpy = "2.2.6"
matplotlib = "3.10.9"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"