[project]
name = "ex1"
version = "0.1.0"
description = "First Poetry exercise"
authors = [{name = "ivo", email= "icorrale@student.42heilbronn.de"}]
requires-python = ">=3.11"
dependencies = [
    "numpy==2.2.6",
    "matplotlib==3.10.9",
    "requests==2.31.0"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"